##Copyright (C) 2022, Advanced Micro Devices, Inc. All rights reserved. ##

if(${TARGET_ARCH} STREQUAL zen4)
message("The configuration is : ${TARGET_ARCH}")
add_subdirectory(zen4)
elseif(${TARGET_ARCH} STREQUAL zen3)
message("The configuration is : ${TARGET_ARCH}")
add_subdirectory(zen3)
elseif(${TARGET_ARCH} STREQUAL zen2)
message("The configuration is : ${TARGET_ARCH}")
add_subdirectory(zen2)
elseif(${TARGET_ARCH} STREQUAL zen)
message("The configuration is : ${TARGET_ARCH}")
add_subdirectory(zen)
elseif(${TARGET_ARCH} STREQUAL amdzen)
message("The configuration is : ${TARGET_ARCH}")
add_subdirectory(generic)
add_subdirectory(zen)
add_subdirectory(zen2)
add_subdirectory(zen3)
add_subdirectory(zen4)
elseif(${TARGET_ARCH} STREQUAL haswell)
message("The configuration is : ${TARGET_ARCH}")
add_subdirectory(haswell)
else(${TARGET_ARCH} STREQUAL generic)
message("The configuration is : ${TARGET_ARCH}")
add_subdirectory(generic)
endif()