##Copyright (C) 2020, Advanced Micro Devices, Inc.## 

add_subdirectory("thread")
add_subdirectory("base")
add_subdirectory("0")
add_subdirectory("1")
add_subdirectory("1d")
add_subdirectory("1f")
add_subdirectory("1m")
add_subdirectory("2")
add_subdirectory("3")
add_subdirectory("compat")
add_subdirectory("ind")
add_subdirectory("util")






